src/styles/index.css
@font-face {
    src: url('../assets/fonts/bold.otf');
    font-family: Manrope;
    font-weight: bold;
}

@font-face {
    src: url('../assets/fonts/regular.otf');
    font-family: Manrope;
    font-weight: normal;
}

h1, h2, h3 {
    font-weight: bold;
}

p + ul > li {
    margin-left: 5%; 
}

li > ul {
    margin-left: 5%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body, html{
    height: 100%;
    font-size: 16px;
    scroll-behavior: smooth;
}

body {
    background-color: #ffcb00;
    font-family: Manrope !important;
    color: #323593;
}

img {
    max-width: 100%;
}


.navbar {
    background-color: #fff;
    text-align: center;
}

.navbar-brand > a > img {
    width: 150px;
}

.nav-item > a {
    color: #323593 !important;
    font-size: 14px;
}

button:focus {
    outline: none;
}

.navbar-light .navbar-toggler {
    color: #323593 !important;
    border-color: #fff !important;
    border: none !important;
    margin-top: 10px;
}

.navbar-light .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,<svg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'><path stroke='%23323593' stroke-width='2' stroke-linecap='linear' stroke-miterlimit='10' d='M4 7h30M4 17h17M4 '/></svg>");
}

/* Hero */

.hero-img, .meet-img{
    margin-top: 15vh;
}

.hero-tagline, .meet-tagline, .clean-tagline {
    font-weight: bold;
    margin-top: 30vh;
}

.hero-text > a {
    background-color: #323593;
    color: #fff;
    border-radius: 48px;
    padding: 10px 20px;
}

/* meet yellow glove */
.meet-yellow-glove {
    margin-top: 100px;
    color: #fff;
    background-color: #323593;
    padding-top: 50px;
    padding-bottom: 50px;
}

.meet-img {
    max-width: 80%;
    display: block;
    margin: 10vh auto 0;
}

.meet-h1 {
    text-align: center;
    font-weight: bold;
}

/* services */
.services {
    padding-top: 100px;
    padding-bottom: 100px; 
}

.ease-img {
    max-width: 50%;
    max-height: 30%;
    margin: 100px auto 25px;
    display: block;
}

h4 {
    text-align: center;
    font-weight: bold;
}

.ease-text {
    width: 50%;
    text-align: center;
    display: block;
    margin: 15px auto;
    font-size: 18px;
}

/* footer */

.discount-img {
    width: 50%;
    margin: 0 auto 30px;
    display: block;
}

.discount-link {
    color: #323593 !important;
    background-color: #fff !important;
    font-weight: bold;
    font-size: 1.25em !important;
}

.footer {
    padding-left: 5%;
    /* display: block; */
}

.footer-link {
    background-color: transparent !important;
    padding: 0 !important;
}

.footer-img {
    width: 80%;
}

.socials, .socials > i{
    margin-right: 15px;
    font-size: 1.35em;
}

.footer-text, .footer-link {
    font-size: 16px ;
}

.footer-text > strong {
    font-size: 1.25em;
}


@media screen and (min-device-width: 320px) and (max-device-width: 359px){
    h2 {font-size: 24px;}
    h3 {
        font-size: 21px;
    }
    p {
        font-size: 12px;
    }
    .hero-tagline, .meet-h1, .meet-tagline, .clean-tagline{
        font-size: 28px;
    }
    .hero-text, .hero-text > a, .footer-text {
        font-size: 14px;
        margin-bottom: 20px;
    }
    .hero-text > a {
        margin: 15px auto 25px !important;
    }
    .mob-hide {
        display: block;
        content: " ";
        margin: 5px auto 0 !important
    }
    .meet-tagline, .clean-tagline {
        margin-top: 25px;
    }
    .meet-img {
        margin-top: 15px;
    }
    .meet-yellow-glove {
        padding-top: 25px;
        padding-bottom: 25px;
        margin-top: 25px;
    }
    .services {
        padding-top: 25px;
        padding-bottom: 25px; 
    }    
    .ease-img {
        max-width: 50%;
        max-height: 30%;
        margin: 15px auto 25px;
        display: block;
    }    
    .ease-text {
        width: 80%;
        text-align: center;
        display: block;
        margin: 15px auto 0;
        font-size: 18px;
    }
    .discount-img {
        width: 90%
    }
    .footer-text > strong {
        font-size: 1.15em;
    }
}

@media screen and (min-device-width: 360px) and (max-device-width: 375px){
    h2 {font-size: 24px;}
    h3 {
        font-size: 21px;
    }
    p {
        font-size: 14px;
    }
    .hero-tagline, .meet-h1, .meet-tagline, .clean-tagline{
        font-size: 28px;
    }
    .hero-text, .hero-text > a, .footer-text {
        font-size: 16px;
        margin-bottom: 20px;
    }
    .hero-text > a {
        margin: 15px auto 25px !important;
    }
    .mob-hide {
        display: block;
        content: " ";
        margin: 5px auto 0 !important
    }
    .meet-tagline, .clean-tagline {
        margin-top: 25px;
    }
    .meet-img {
        margin-top: 25px;
    }
    .meet-yellow-glove {
        padding-top: 50px;
        padding-bottom: 50px;
        margin-top: 50px;
    }
    .services {
        padding-top: 50px;
        padding-bottom: 50px; 
    }
    .ease-img {
        max-width: 50%;
        max-height: 30%;
        margin: 15px auto 25px;
        display: block;
    }    
    .ease-text {
        width: 80%;
        text-align: center;
        display: block;
        margin: 15px auto 0;
        font-size: 18px;
    }
    .discount-img {
        width: 90%
    }
    .footer-text > strong {
        font-size: 1.15em;
    }
}

@media screen and (device-width: 375px) and (device-height: 812px){
    .hero-tagline{
        font-size: 36px;
    }
    .hero-img {
        margin: 8vh auto 30px !important;
    }
    .hero-text, .hero-text > a {
        font-size: 18px;
        margin-bottom: 25px;
    }
    .hero-text > a {
        margin: 35px auto 35px !important;
    }
    .mob-hide {
        display: none;
    }
    .meet-yellow-glove {
        padding-top: 50px;
        padding-bottom: 50px;
        margin-top: 50px;
    }
}
/* ... */

